# Xianxia_Studio

./: .editorconfig  .gitattributes  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DEV_PARITY.md  LICENSE  README.md  RELEASING.md  SECURITY.md  depthflow-test.py  package.json  playwright.config.ts  pnpm-lock.yaml  test_clone_direct.py  test_clone_minimal.py  test_pipeline_e2e.py  test_short_render_direct.py  test_voice_synth.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_voices_expanded.sql  0003_chapters_resume.sql  0004_scheduler_retry.sql  0005_originality.sql
apps/desktop/src-tauri/sidecars/: README.md
apps/desktop/src-tauri/src/: app_settings.rs  commands.rs  diag.rs  hardware.rs  lib.rs  main.rs  process_ext.rs
apps/desktop/src-tauri/src/commands/: clipmine.rs  library.rs  music.rs  originality.rs  sfx.rs  voice_clones.rs
apps/desktop/src-tauri/src/db/: chapters.rs  mod.rs  projects.rs  scheduled.rs  settings.rs  voices.rs
apps/desktop/src-tauri/src/installer/: detect.rs  downloader.rs  llamacpp.rs  llm.rs  manifest.rs  mod.rs  ollama.rs  paths.rs  python_env.rs  runner.rs  verify.rs
apps/desktop/src-tauri/src/pipeline/: mod.rs
apps/desktop/src-tauri/src/scheduler/: mod.rs
apps/desktop/src-tauri/src/sidecars/: extract.rs  hf_seed.rs  mod.rs
apps/desktop/src-tauri/src/tiktok/: commands.rs  creds.rs  mod.rs
apps/desktop/src-tauri/src/youtube/: commands.rs  mod.rs  oauth.rs  upload.rs
apps/sidecar-py/: pyproject.toml  requirements-ai.txt  requirements-engagement.txt  requirements-music.txt  requirements-vision.txt  requirements-voice.txt  requirements.txt  server.py
apps/sidecar-py/scripts/: acestep_bootstrap.py  acestep_runner.py  aligner_runner.py  depthflow_runner.py  watermark_runner.py
apps/sidecar-py/src/xianxia_ai/: __init__.py  chapters.py  codec.py  effects.py  gguf_meta.py  llm.py  llm_backend.py  llm_recommender.py  logging_utils.py  presets.py  prompts.py
apps/sidecar-py/src/xianxia_ai/models/: __init__.py  comfyui_client.py  image_model.py  tts_base_model.py  tts_model.py  whisper_model.py
apps/sidecar-py/src/xianxia_ai/routes/: clipmine.py  depth.py  depthflow.py  diag.py  engagement.py  export.py  health.py  image.py  install.py  ltx_video.py  models.py  music.py  originality.py  reframe.py  render.py  script.py  seo.py  sfx.py  shorts.py  shorts_auto.py  subtitles.py  transcribe.py  tts.py  unload.py  voice_acquisition.py  watermark.py
apps/sidecar-py/src/xianxia_ai/workflows/: ltx23_video.json  ltx23_video_gguf.json  stable_audio_3_sfx.json  (+2 more)
apps/sidecar-py/tests/: test_chapters.py  test_ltx_video.py  test_presets.py  test_presets_wiring.py  test_subject_diversity.py  test_subtitles_layout.py
(+152 files in other folders)
